Revision history for SMS-Send-SMSGlobal-HTTP

0.01    19th May 2011
        [Initial release.]

0.02    20th May 2011
        [A couple of tweaks based on inital CPAN testers results.]
        - Took out spurious dependency and require of Crypt::SSLeay
        - Tweaked build of http_params - was passing through undefined
          values under perl 5.8.x

0.03    22nd May 2011
        - Took out _get option
        - Fixed _transport option

0.04    27th May 2011
        - Direct _verbose output to STDERR not STDOUT.
        - object.t: Replace LWP::UserAgent with Test::MockObject object,
          to avoid failures in some build environments
        - send_sms.t - avoid local ($some_hash{$key}) idiom in tests
          to (hopefully) pass smoke tests for perl 5.6.1 

0.05    30th May 2011
        - Also mock LWP::UserAgent in send_sms.t
        - Set perl version to 5.6.0

0.06    3rd June 2011
        - Handle alphanumeric from caller-IDs
