@@ -25,5 +25,6 @@ Revision history for SMS-Send-SMSGlobal-HTTP
         - Set perl version to 5.6.0
 
 0.06    3rd June 2011
-        - Handle alphanumeric from caller-IDs
+        - Handle alphanumeric caller-IDs
+        - Allow list of recipents numbers; driver level only
 
